Fix design gap in GF styling, selector complexity
Add a color-indicator style for required drop down fields that are using the enhanced user interface which is consistent with the design used for other required fields; also reduce unnecessary selector complexity.

--- a/forms.less
+++ b/forms.less
@@ -310,13 +310,13 @@
 				color: @hex-dark-grayish-pink;
 			}
 
-			& > div.ginput_container_select {
-				& > div.chosen-container {
+			& > .ginput_container_select {
+				& > .chosen-container {
 					width: 100% !important;
 				}
 
-				& > div.chosen-container-single {
-					& > a.chosen-single {
+				& > .chosen-container-single {
+					& > .chosen-single {
 						background: linear-gradient(to bottom, rgba(0,0,0,0) 20%, 
 							rgba(0,0,0,0.038) 50%, rgba(0,0,0,0.07) 52%, 
 							rgba(0,0,0,0.045) 100%), linear-gradient(to bottom, #fff, #fff);
@@ -337,7 +337,7 @@
 						}
 					}
 
-					&.chosen-with-drop > a.chosen-single {
+					&.chosen-with-drop > .chosen-single {
 						background: linear-gradient(to bottom, rgba(0,0,0,0.07) 20%, 
 							rgba(0,0,0,0) 80%), linear-gradient(to bottom, #fff, #fff);
 					}
@@ -365,7 +365,7 @@
 ***     >>> §2.2: Required field highlighting
 **/
 
-		ul.gform_fields {
+		.gform_fields {
 			&.top_label {
 				& > li.gfield {
 					&.gfield_error {
@@ -411,7 +411,17 @@
 
 			}
 
-			& > li.gfield.gfield_contains_required {
+			& > .gfield.gfield_contains_required {
+				& > .ginput_container_select {
+					& > .gfield_select:not(.gf-value-entered) + .chosen-container-single:not(.chosen-with-drop) > .chosen-single {
+						background: linear-gradient(to bottom,rgba(0,0,0,0) 20%,rgba(0,0,0,.038) 50%,rgba(0,0,0,.07) 52%,rgba(0,0,0,.045) 100%), linear-gradient(to bottom, rgba(255,0,0,0.1), rgba(255,0,0,0.1)), linear-gradient(to bottom,#fff,#fff);
+					}
+
+					& > .gfield_select + .chosen-container-single.chosen-with-drop > .chosen-single {
+						background: linear-gradient(to bottom,rgba(0,0,0,0) 20%,rgba(0,0,0,.038) 50%,rgba(0,0,0,.07) 52%,rgba(0,0,0,.045) 100%), linear-gradient(to bottom, @hex-bright-blue, @hex-bright-blue);
+					}
+				}
+
 				input,
 				select,
 				textarea {
@@ -428,7 +438,8 @@
 					background-color: rgba(255,0,0,0.1);
 				}
 
-				ul.gfield_checkbox, ul.gfield_radio {
+				.gfield_checkbox,
+				.gfield_radio {
 					.transition(~"background 0.3s ease");
 
 					&:not(.gf-value-entered) {
@@ -438,7 +449,7 @@
 				}
 
 				// Exceptions
-				span.address_line_2 input {
+				.address_line_2 input {
 					background-color: @hex-white !important;
 
 					&:focus {
